# ansible-rustup

./: .gitignore  .travis.yml  LICENSE  README.md  devenv.nix  pyproject.toml  requirements.txt  tox.ini
.ci/: archlinux  fedora  test  ubuntu
.github/workflows/: main.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  molecule.yml  playbook.yml
molecule/resources/: Dockerfile.j2
molecule/resources/playbooks/: converge.yml  create.yml  destroy.yml
molecule/shared/tests/: conftest.py  rustup_default.py  test_default.py
tasks/: configure-shell.yml  configure.yml  gather-state.yml  get-rustup.yml  install-rust.yml  install-rustup.yml  main.yml  set-toolchain.yml
templates/: rustrc.j2
vars/: Archlinux.yml  Darwin.yml  Debian.yml  macOS.yml  main.yml
