[tool.poetry]
name = "ansible-rustup"
version = "0.1.0"
description = "Ansible role to deploy rust and cargo"
authors = ["Carlos Hernandez <carlos@hrndz.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
molecule = "^6.0.2"
ansible = "^8.4.0"
testinfra = "^6.0.0"
ansible-lint = { version = "^6.20.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
