[tool.poetry]
name = "ansible-rustup"
version = "0.1.0"
description = "Ansible role to deploy rust and cargo"
authors = ["Carlos Hernandez <carlos@hrndz.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.group.dev.dependencies]
ansible = ">=8.4.0"
testinfra = ">=6.0.0"
ansible-lint = { version = ">=6.20.0", markers = "platform_system != 'Windows'" }
molecule-plugins = {extras = ["docker"], version = "^23.5.0"}
molecule = ">=6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
